# quantik-core-py

./: .flake8  .gitignore  .python-version  001_game_entities_consolidation_analysis.md  AGENTS.md  BENCHMARK-RESULTS.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GAME_TREE_ANALYSIS.md  QUANTIK_CODE.md  README.md  SYMMETRY_REDUCTION_DEMONSTRATION.md  auto-lint.sh  dev-check.sh  next_steps.md  pyproject.toml  qfen_validation_results.txt  test_hybrid_approach.py  test_performance.py  validate_qfen_fixtures.py
.github/: copilot-instructions.md
.github/workflows/: README.md  build.yml  contracts.yml  daily-smoke.yml  integration.yml  publish.yml  test.yml
analysis/: final_optimization_analysis.py  performance_analysis.py  realistic_performance_analysis.py  single_pass_summary.py  v1_vs_v2_comparison.py
benchmarks/: README.md  __init__.py  adapters.py  agreement.py  benchmark_state_validator.py  bundle.py  checkpoint.py  correctness.py  dataset.py  head_to_head.py  high_volume_benchmark.py  metrics.py  planner.py  reference.py  report.py  single_pass_benchmark.py  stability.py
benchmarks/depth4-canonical/: sample-1000-part-01.json  sample-1000-part-02.json  sample-1000-part-03.json  sample-1000-part-04.json  sample-1000.json
docs/: API_PORTABILITY.md  API_STABILITY.md  ARCHITECTURE.md  BEAM_SEARCH.md  BENCHMARKS.md  EXAMPLES.md  HYBRID.md  MCTS.md  MINIMAX.md  OPENING_BOOK.md  PARALLELIZATION_ANALYSIS.md  REWRITE_ANALYSIS.md  search-telemetry.md
docs/articles/: 2026-07-10-three-ways-to-search-quantik.md
docs/research/: 2026-07-07-beam-search-vs-mcts.md  2026-07-08-budget-shaping-schedules-vs-mcts-truncation.md  2026-07-10-alpha-beta-eval-vs-mcts.md
docs/rewrite-plans/: ELIXIR.md  ERLANG.md  GO.md  RUST.md
examples/: baseline_measurement.py  basic_usage.py  beam_search_demo.py  bitboard_compact_demo.py  compact_state_demo.py  compact_tree_demo.py  cross_engine_benchmark.py  endgame_puzzle_generator.py  generate_opening_book.py  generate_puzzles.py  legal_moves_demo.py  mcts_demo.py  minimax_benchmark.py  minimax_demo.py  opening_book_demo.py  search_summary_export.py  symmetry_reduction.py  win_probability_analysis.py
src/quantik_core/: __init__.py  api_portability_report.py  artifact_data.py  beam_search.py  board.py  commons.py  constants.py  contracts.py  core.py  evaluation.py  game_stats.py  game_utils.py  hybrid.py  mcts.py  minimax.py  ml_data.py  move.py  move_fast.py  opening_book.py  opening_book_summary.py  qfen.py  search_summary.py  search_telemetry.py  state_validator.py  state_validator_comparison.py  symmetry.py  training_dataset.py
tests/: __init__.py  fixtures.py  test_api_portability_report.py  test_artifact_data.py  test_beam_search.py  test_beam_telemetry.py  test_benchmark_adapters.py  test_benchmark_agreement.py  test_benchmark_bundle.py  test_benchmark_checkpoint.py  test_benchmark_correctness.py  test_benchmark_dataset.py  test_benchmark_h2h.py  test_benchmark_metrics.py  test_benchmark_planner.py  test_benchmark_reference.py  test_benchmark_stability.py  test_bitboard_compact.py  test_board.py  test_compact_state.py  test_compact_tree.py  test_core.py  test_core_cbor.py  test_evaluation.py  test_examples_demos.py  test_fixtures.py  test_game_stats.py  test_game_utils.py  test_hybrid.py  test_import_contracts.py  test_mcts.py  test_mcts_telemetry.py  test_memory_profiling.py  test_minimax.py  test_minimax_telemetry.py  test_ml_data.py  test_move.py  test_opening_book.py  test_opening_book_filler.py  test_opening_book_summary.py  (+10 more)
tests/fixtures/: selfplay_v1.jsonl
tuning/: __init__.py  build_dataset.py  fill_opening_book.py  fit_weights.py  weights.json
(+34 files in other folders)
