[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantik-core"
version = "1.1.0"
description = "High-performance core utilities for Quantik game state manipulation"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Mauro Berlanda", email = "mauro.berlanda@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = [
    "quantik", "board-games", "game-ai", "monte-carlo", "bitboards",
    "game-engine", "mcts", "game-theory", "combinatorial-games"
]
requires-python = ">=3.12"
dependencies = [
    "psutil>=7.0,<8",
    "numpy>=2.0,<3",
    "zstandard>=0.19.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9,<10",
    "pytest-cov>=7,<8",
    "hypothesis>=6,<7",
    "black>=26,<27",
    "flake8>=7,<8",
    "mypy>=2,<3",
    "pre-commit>=4,<5",
    "types-psutil>=7,<8",
    "build>=1,<2",
    "twine>=6,<7",
    "autopep8>=2,<3",
]
cbor = [
    "cbor2>=6,<7",
]
arrow = [
    "pyarrow>=16,<22",
]
docs = [
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
]
benchmark = [
    "pytest-benchmark>=4.0",
]
all = [
    "quantik-core[dev,cbor,arrow,docs,benchmark]",
]

[project.urls]
Homepage = "https://github.com/mberlanda/quantik-core-py"
Repository = "https://github.com/mberlanda/quantik-core-py"
Documentation = "https://github.com/mberlanda/quantik-core-py#readme"
"Bug Tracker" = "https://github.com/mberlanda/quantik-core-py/issues"
Changelog = "https://github.com/mberlanda/quantik-core-py/blob/main/CHANGELOG.md"

[project.scripts]
quantik-api-portability-report = "quantik_core.api_portability_report:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
quantik_core = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true


[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=quantik_core",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=90",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks tests as benchmarks",
]

[tool.coverage.run]
source = ["src/quantik_core"]
omit = ["*/tests/*", "*/benchmarks/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
